Add a picture, ingredients and preparation of dish

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,26 @@
         <h1>
             Lasagna
         </h1>
+        <img src="../images/lasagna.jpg" alt="this is a picture of lasanga">
+        <h2>Delicious homemade lasagna</h2>
+        <p>This lasagna is homemade, containing only fresh and tasty ingredients</p>
+        <p>You dont need a lot of skills to make this delicious dish, so lets start!</p>
+        <ul>
+            <li>Lasagna sheets</li>
+            <li>Tomatoes</li>
+            <li>Ground beef</li>
+            <li>Parmezan cheese</li>
+        </ul>
+        <h3>
+            Preparation
+        </h3>
+        <ol>
+            <li>Slightly bake the onions and garlic until slightly caramelized</li>
+            <li>Toss in your ground beef and bake until golden brown, add some salt and pepper</li>
+            <li>Add the tomatoes and some oregano</li>
+            <li>Construct the lasagna with your ingredients starting with ground beef, cheese
+                and a layer of lasagna sheets
+            </li>
+        </ol>
     </body>
 </html>
